--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,16 +21,19 @@ jobs:
       - name: 1. Checkout Code
         uses: actions/checkout@v4
       
-      - name: 2. Setup Java 17 and Compile Project
+      - name: 2. Setup Java 21 and Compile Project
         uses: actions/setup-java@v4
         with:
-          java-version: '17' 
+          java-version: '21' 
           distribution: 'temurin'
           cache: maven
           
       - name: 3. Compile Project with Maven
         run: mvn clean package -DskipTests
 
+      - name: 4. Setup Docker Buildx 
+        uses: docker/setup-buildx-action@v3
+        
       - name: 5. Log in to GHCR
         uses: docker/login-action@v3
         with:
