deploiement réussi sur le serveur

--- a/k8s/credentials.yaml
+++ b/k8s/credentials.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: db-secret
+  namespace: etudiant23-ns
 type: Opaque
 data:
-  DB_PASSWORD: bW9uUGFzcw==
+  DB_PASSWORD: SGo1cEhTWnlONG4xUW5WYg==
