--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,11 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: todo-app-service
+  namespace: etudiant23-ns
 spec:
   selector:
-    app: todo-api 
+    app: todo-api
   type: NodePort
   ports:
     - protocol: TCP
-      port: 8080 
-      targetPort: 8080 
+      port: 8080
+      targetPort: 8080
