--- a/k8s/storage.yaml
+++ b/k8s/storage.yaml
@@ -2,9 +2,10 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: app-pvc
+  namespace: etudiant23-ns
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi 
+      storage: 1Gi
